Emails/src/objects/Loan__c.object
<CustomObject>
    <description>Loan class having loan and related applicant information</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount of loan applicant applied for.</description>
        <inlineHelpText>Fill amount of loan</inlineHelpText>
        <label>Amount</label>
        <precision>11</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <description>Name of applicant applying for the loan</description>
        <inlineHelpText>Fill name of applicant applying for loan</inlineHelpText>
        <label>Applicant Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Mail__c</fullName>
        <description>E-Mail Id of applicant</description>
        <inlineHelpText>Fill E-Mail Id of applicant.</inlineHelpText>
        <label>E-Mail</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager of loan</description>
        <inlineHelpText>Select manager for the loan</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of loan</description>
        <inlineHelpText>Select status of loan</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Request Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>